<resources>
    <string name="app_name">POSBilling Application</string>
    <string name="ankur">Ankur</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="please_enter_otp">Please enter otp received on your registered mobile number</string>
    <string name="title_activity_dashboard">ActivityDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_customer_name">Enter customer name</string>
    <string name="enter_owner_name">Enter owner name</string>
    <string name="buisness_name">Buisness name</string>
    <string name="shop_id">Shop Id</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_purpose">Enter purpose</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="enter_village">Enter village</string>
    <string name="enter_taluka">Enter taluka</string>
    <string name="enter_district">Enter district</string>
    <string name="select_state">Select State</string>
    <string name="enter_country">Enter country</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="We_need_permission">We need permission to capture images</string>
    <string name="We_need_permission_Audio">We need permission to capture audio</string>
    <string name="Please_permit_the_permission_through">Please permit the permission through</string>
    <string name="Settings_screen">Settings screen.</string>
    <string name="Permit_Manually">Permit Manually</string>
    <string name="select_file">Select File.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="cancel">Cancel</string>
    <string name="India">India</string>
    <string name="enter_Expense">Enter expense</string>
    <string name="select_Date">Select Date</string>


    <string name="menu_home">Home</string>
    <string name="menu_outstanding">Outstanding</string>
    <string name="menu_payment_received">Payment received</string>
    <string name="menu_sale">Sale</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_other">Other</string>
    <string name="menu_add_customer">Add customer</string>
    <string name="menu_help">Help</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_logout">Logout</string>
    <string name="maharashtra">Maharashtra</string>

    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="RAMU_MUNIMJI">Ramu Munimji</string>
    <string name="PLEASE_ENTER_MOBILE_NUMBER">Please enter mobile number</string>
    <string name="please_check_internet">Please check your internet connection</string>
    <string name="please_enter_10_digit_mobile_number">Please enter 10 digit mobile number</string>
    <string name="please_enter_4_digit_otp">Please enter 4 digit otp</string>

    <string name="contact_mail">shelargauri10@gmail.com</string>
    <string name="contact_one">+91 72768 38431</string>
    <string name="contact_two">+91 91453 20664</string>
    <string name="Total_Customers">Total Customers</string>
    <string name="Total_Outstanding">Total Outstanding</string>
    <string name="search">Search</string>
    <string name="outstanding_summary">Outstanding Summary</string>
    <string name="Customer_Id">Customer Id :</string>
    <string name="Merge">Merge</string>
    <string name="Entry">Entry</string>
    <string name="litre">Litre</string>
    <string name="Debit">Debit</string>
    <string name="Credit">Credit</string>
    <string name="outstanding_list">Outstanding List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
