<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_outStanding"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_outstanding" />
        <item
            android:id="@+id/nav_payment_received"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_payment_received" />
        <item
            android:id="@+id/nav_sale"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_sale" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_expenses" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_other"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_other" />
        <item
            android:id="@+id/nav_add_customer"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_add_customer" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_logout" />
    </group>

</menu>